modified styling of the homepage due to height property giving research, etc pages a strange look on iphone 5

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -357,6 +357,16 @@ ul.subnav.logged-out
     .right
       margin-right: 1rem
 
+@media (max-width: $media-small-max)
+  .navbar > .mobile-nav > .right
+    width: 100%
+    margin-right: 0
+  
+  .login-buttons
+    margin: 0 auto
+    width: 100%
+    float: none
+
 .noscroll
   overflow: hidden
 
