--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -9,22 +9,22 @@
 
   .hero-section
     background:rgba(255,255,255,0.5)
-    height: 300px
-    padding: 10px 0 0
 
     h1
       text-transform: none
       font-size: 2rem
       color: $color-grey-3
       width: 70%
-      margin: 90px auto 0
+      margin: 0 auto
+      padding: 3em 0 1em 0
 
     h3
       font-size: .9rem
       color: $color-grey-4
       text-transform: none !important
       width: 80%
-      margin: 20px auto
+      margin: 0 auto
+      padding-bottom: 4em
 
   .section-container
     margin: 0 auto
@@ -133,16 +133,19 @@ a.outline-button
 @media (max-width: $media-small-max)
   .homepage
     .hero-section
-      height: 250px
+      margin-top: 40px
+      padding: .5rem
 
       img
-        padding-top: 3rem
+        padding-top: 1.5rem
 
       h1
-        padding: 2rem 0 0
-        margin: 0 auto
+        padding: 1.5rem 0
         font-size: 1.3rem
-        width: 90%
+        width: 100%
+      h3
+        padding-bottom: 1rem
+        width: 100%
 
     .section-container
       padding: 0 !important
@@ -198,8 +201,8 @@ a.outline-button
       margin: 0 auto
 
 
-@media (max-width: $media-xsmall-max)
-  .hero-section
-    height: 280px !important
-    h1
-      padding: 1rem 0 0 !important
+// @media (max-width: $media-xsmall-max)
+//   .hero-section
+//     height: 280px !important
+//     h1
+//       padding: 1rem 0 0 !important
