--- a/app/views/grades/standard_edit/_badges_available.html.haml
+++ b/app/views/grades/standard_edit/_badges_available.html.haml
@@ -1,4 +1,4 @@
-- if @badges.present?
+- if badges.present?
   %h4#badges-available
     #{term_for :badges} available
     %button#add-badges(ng-click="addRemainingEarnedBadges($event)" ng-show="badgesAvailable()") Add All
