--- a/app/views/grades/standard_edit/_raw_score_grading_fields.html.haml
+++ b/app/views/grades/standard_edit/_raw_score_grading_fields.html.haml
@@ -1,9 +1,9 @@
 .raw-score
-  = f.label :raw_score, "Raw Score (#{@assignment.point_total} Points Possible)"
+  = f.label :raw_score, "Raw Score (#{assignment.point_total} Points Possible)"
   = f.text_field :raw_score,
-    default: @assignment.point_total,
+    default: assignment.point_total,
     label: "Score",
-    hint: "Total Assignment Points: #{ points @assignment.point_total }",
+    hint: "Total Assignment Points: #{ points assignment.point_total }",
     "ng-model" => "grade.raw_score",
     "ng-change" => "grade.update()",
     "ng-click" => "grade.enableCustomValue()",
