--- a/app/views/info/ungraded_submissions.html.haml
+++ b/app/views/info/ungraded_submissions.html.haml
@@ -16,7 +16,7 @@
 
   %br
 
-  %table.nofeatures_default_due_date_dynatable{"aria-describedby" => "ungradedTableCaption"}
+  %table.dynatable{"aria-describedby" => "ungradedTableCaption"}
     %thead
       %tr
         %th{scope: "col", :width => "10%"} Assignment
