--- a/app/views/staff/show.html.haml
+++ b/app/views/staff/show.html.haml
@@ -13,7 +13,7 @@
       %li= link_to course.name, course
 
   %h4 Recently Graded
-  %table.nofeatures_dynatable
+  %table.dynatable
     %thead
       %tr
         %th Assignment
