--- a/app/views/assignments/grades/edit_status.html.haml
+++ b/app/views/assignments/grades/edit_status.html.haml
@@ -5,7 +5,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  %table.nofeatures_dynatable
+  %table.dynatable
     %thead
       %tr
         %th= term_for :student
