--- a/app/views/assignments/grades/import_results.html.haml
+++ b/app/views/assignments/grades/import_results.html.haml
@@ -8,7 +8,7 @@
   - unless @result.unsuccessful.empty?
     %h4.subtitle
       = "#{@result.unsuccessful.count} #{"Grade".pluralize(@result.unsuccessful.count)} Not Imported"
-    %table.responsive.nofeatures_dynatable
+    %table.dynatable
       %thead
         %tr
           %th Data
