--- a/app/views/challenge_grades/edit_status.html.haml
+++ b/app/views/challenge_grades/edit_status.html.haml
@@ -5,7 +5,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  %table.nopage_dynatable
+  %table.dynatable
     %thead
       %tr
         %th= term_for :team
