--- a/app/views/info/resubmissions.html.haml
+++ b/app/views/info/resubmissions.html.haml
@@ -18,7 +18,7 @@
     %h5.section-title
       = link_to assignment.name, assignment
 
-    %table.nofeatures_default_last_name_dynatable{"aria-describedby" => "ungradedTableCaption"}
+    %table.dynatable{"aria-describedby" => "ungradedTableCaption"}
       %thead
         %tr
           - if assignment.is_individual?
