Richard fixed multiple numeric sorting challenges!

--- a/app/views/info/per_assign.html.haml
+++ b/app/views/info/per_assign.html.haml
@@ -15,7 +15,7 @@
         %thead
           %tr
             %th{"scope" => "col"} Name
-            %th{"scope" => "col", "data-dynatable-sorts" => "numericScore"} Min
+            %th{"scope" => "col"} Min
             %th{"scope" => "col"} Max
             %th{"scope" => "col"} Median
             %th{"scope" => "col"}
@@ -24,7 +24,7 @@
                 %i.fa.fa-info-circle
               .display_on_hover.hover-style
                 The average of all grades, including those who earned zero
-            %th{"scope" => "col", "data-dynatable-column" => "aveEarned"}
+            %th{"scope" => "col"}
               Avg Earned
               %a
                 %i.fa.fa-info-circle
