--- a/app/views/info/resubmissions.html.haml
+++ b/app/views/info/resubmissions.html.haml
@@ -28,7 +28,7 @@
               %th{scope: "col", :width => "15%"}= "#{term_for :team}"
           - elsif assignment.has_groups?
             %th{scope: "col"} Group
-          %th{scope: "col", :width => "7%", "data-dynatable-sorts" => "numericScore"} Current Score
+          %th{scope: "col", :width => "7%"} Current Score
           %th{scope: "col", :width => "7%"} Graded
           %th{scope: "col", :width => "7%"} Resubmitted
           %th{scope: "col", :style => "min-width: 300px" }
