--- a/app/views/students/leaderboard.html.haml
+++ b/app/views/students/leaderboard.html.haml
@@ -16,7 +16,7 @@
     %thead
       %tr
         %th
-        %th{scope: "col", "data-dynatable-sorts" => "numericScore"} Rank
+        %th{scope: "col"} Rank
         %th{scope: "col"} First Name
         %th{scope: "col"} Last Name
         - if presenter.display_pseudonyms?
