--- a/app/views/info/_grades_table.haml
+++ b/app/views/info/_grades_table.haml
@@ -23,7 +23,7 @@
                 %th{scope: "col", :width => "15%"}= "#{term_for :team}"
             - elsif assignment.has_groups?
               %th{scope: "col"} Group
-            %th{scope: "col", :width => "8%", "data-dynatable-sorts" => "numericScore"} Score
+            %th{scope: "col", :width => "8%"} Score
             %th{scope: "col"} Feedback
             %th{scope: "col", "data-dynatable-no-sort" => "true", :width => "20%" }
               %span.sr-only Actions
