--- a/app/views/info/awarded_badges.html.haml
+++ b/app/views/info/awarded_badges.html.haml
@@ -18,7 +18,7 @@
       %tr
         %th{scope: "col"} First Name
         %th{scope: "col"} Last Name
-        %th{scope: "col", "data-dynatable-sorts" => "badgeCount"}= "#{term_for :badges} Earned"
+        %th{scope: "col"}= "#{term_for :badges} Earned"
         %th{:style => "display: none", } Badge Count
         - if current_course.valuable_badges?
           %th{scope: "col"} Total Badge Score
