--- a/app/views/students/grade_index.html.haml
+++ b/app/views/students/grade_index.html.haml
@@ -27,7 +27,7 @@
           %td= g.submission.id if g.submission.present?
           %td= g.final_points
           %td= g.try(:score)
-          %td= g.predicted_score
+          %td= g.predicted_points
           %td= g.feedback
           %td= g.status
           %td= link_to "Edit Grade", edit_assignment_grade_path(g.assignment_id, student_id: g.student_id), class: "button"
