--- a/app/views/students/teams.html.haml
+++ b/app/views/students/teams.html.haml
@@ -9,7 +9,7 @@
       - if current_course.in_team_leaderboard? || @team.in_team_leaderboard?
         = render "teams/in_team_rankings", team: @team
 
-      %h4.subtitle Your #{term_for :team} (#{@team.name}) has earned #{points @team.score } points
+      %h4.subtitle Your #{term_for :team} (#{@team.name}) has earned #{points @team.challenge_grade_score } points
       - if @team.banner.present?
         %img.clear{:src => @team.banner, :height => 200 }
 
