--- a/app/views/assignments/_description_and_downloads.haml
+++ b/app/views/assignments/_description_and_downloads.haml
@@ -71,12 +71,12 @@
       - presenter.assignment.unlock_keys.each do |key|
         %li= link_to key.key_description_sentence, key.unlockable
 
-  - if presenter.assignment.description.present? && ( !current_student || presenter.assignment.description_visible_for_student?(current_student))
+  - if presenter.assignment_has_viewible_description?(current_user)
     %hr.dotted
     %h4.uppercase Guidelines:
     %p= raw presenter.assignment.description
 
-  - if presenter.assignment.purpose.present? && ( !current_student || presenter.assignment.purpose_visible_for_student?(current_student))
+  - if presenter.assignment_has_viewible_purpose?(current_user)
     %hr.dotted
     %h4.uppercase Purpose:
     %p= raw presenter.assignment.purpose
