--- a/app/views/assignments/_description_and_downloads.haml
+++ b/app/views/assignments/_description_and_downloads.haml
@@ -11,7 +11,7 @@
   .italic= "Opens: #{presenter.assignment.open_at}" if presenter.assignment.open_at?
   .italic= "Due: #{presenter.assignment.due_at}" if presenter.assignment.due_at?
 
-  - if current_student.present? && presenter.assignment.accepts_submissions? &&  (presenter.assignment.is_unlocked_for_student?(current_student) || (presenter.assignment.has_groups? && presenter.assignment.is_unlocked_for_group?(current_student.group_for_assignment(presenter.assignment))))
+  - if presenter.assignment_accepting_submissions?(current_student)
     .no-bullet= render "students/submissions", assignment: presenter.assignment
 
   - if presenter.student_logged?(current_user)
