added styles for navigation in logged out header and then hid them for now until we do away with login buttons

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -179,6 +179,9 @@ ul.subnav.logged-out
     overflow: hidden
   .the-nav .nav-pill.right
     z-index: 100
+  .the-nav .nav-pill.right.public-nav li
+    margin-top: .4em
+    display: none
   .the-nav > .nav
     margin: 0
     padding-left: 0
