--- a/app/views/layouts/navigation/_top_bar_logged_out.haml
+++ b/app/views/layouts/navigation/_top_bar_logged_out.haml
@@ -6,7 +6,7 @@
           %li.course-site
             %a.no-hover.site-title{:href => root_url }
               = image_tag "gradecraft_logo.png", :width => "150"
-        %ul.nav.nav-pill.right
+        %ul.nav.nav-pill.right.public-nav
           = render "layouts/navigation/public_nav"
           = render "layouts/navigation/login_nav"
       %nav.mobile-nav.hide-for-large
