--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -179,7 +179,7 @@ ul.subnav.logged-out
     overflow: hidden
   .the-nav .nav-pill.right
     z-index: 100
-  .the-nav .nav-pill.right.public-nav li
+  .the-nav .nav-pill.right.public-nav
     margin-top: .4em
     display: none
   .the-nav > .nav
