--- a/app/views/layouts/navigation/_top_bar_logged_out.haml
+++ b/app/views/layouts/navigation/_top_bar_logged_out.haml
@@ -1,7 +1,7 @@
 .layout-right-content
   %header
     .navbar.container
-      %nav.the-nav.nav-collapse.hide-for-small.hide-for-medium.clearfix{role: "navigation"}
+      %nav.the-nav.nav-collapse.clearfix{role: "navigation"}
         %ul.nav.nav-pill.left
           %li.course-site
             %a.no-hover.site-title{:href => root_url }
@@ -9,8 +9,3 @@
         %ul.nav.nav-pill.right.public-nav
           = render "layouts/navigation/public_nav"
         = render "layouts/navigation/login_nav"
-      %nav.mobile-nav.hide-for-large
-        .left
-          %a.no-hover.site-title{:href => root_url }
-            .hide-for-small= image_tag "gradecraft_logo.png", :width => "150"
-        .right= render "layouts/navigation/login_nav"
