--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -156,6 +156,12 @@ ul.subnav.logged-out
   margin-top: .4em
   display: none
 
+.gc-mark
+  display: none
+
+.btn-public-nav
+  display: none
+
 .offscreen-sidebar
   display: none
 
@@ -271,7 +277,7 @@ ul.subnav.logged-out
   .mobile-nav
     margin: 0 auto
     text-align: center
-
+  
     .login-buttons
       padding: .25rem 0 !important
       margin: 0 !important
@@ -343,22 +349,22 @@ ul.subnav.logged-out
     padding-top: .5rem
     margin: 0 auto
     text-align: center
-
+  
     .nav.nav-pill
       width: 100% !important
       text-align: center
-
+  
       li
         display: inline
         a
           color: $color-blue-4
-
+  
     .site-title
       padding: 0
-
+  
     .right
       margin-right: 1rem
-
+  
     .left
       margin-left: 1rem
 
@@ -371,14 +377,36 @@ ul.subnav.logged-out
     margin: 0 auto
     width: 100%
     float: none
+    display: none
 
   .the-nav .nav-pill.right.public-nav
-    display: inline
+    display: block
     background-color: $color-blue-4
     position: fixed
-    top: 0
+    top: 45
+    width: 90%
+    text-align: center
+    padding: 1em 0
     li
       display: block
+      padding: .5em
+      font-size: 1.2em
+      a
+        color: $color-grey-2
+
+  .gc-mark
+    display: inline-block
+
+  .logo-home
+    display: none
+
+  .btn-public-nav
+    display: inline-block
+    float: right
+    color: $color-blue-4
+    margin-top: 1em
+    margin-right: 1em
+
 .noscroll
   overflow: hidden
 
@@ -388,6 +416,7 @@ ul.subnav.logged-out
   color: $color-blue-4
   &:hover
     text-decoration: none
+
 .course-info-card
   display: none
   position: absolute
@@ -398,6 +427,7 @@ ul.subnav.logged-out
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12)
   width: 400px
   padding: 1em
+
   & > li
     list-style: none
     padding: .25em 0em
