added simple jquery to toggle mobile menu

--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -380,7 +380,7 @@ ul.subnav.logged-out
     display: none
 
   .the-nav .nav-pill.right.public-nav
-    display: block
+    display: none
     background-color: $color-blue-4
     position: fixed
     top: 45
