--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -344,7 +344,7 @@ ul.subnav.logged-out
       color: $color-white
       padding: .5rem .75rem
       font-size: 1rem
-
+  
   .navbar .mobile-nav
     padding-top: .5rem
     margin: 0 auto
@@ -383,10 +383,11 @@ ul.subnav.logged-out
     display: none
     background-color: $color-blue-4
     position: fixed
-    top: 45
-    width: 90%
+    top: 45px
+    width: 100%
     text-align: center
     padding: 1em 0
+    margin: 0
     li
       display: block
       padding: .5em
