--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -156,6 +156,12 @@ ul.subnav.logged-out
   margin-top: .4em
   display: none
 
+.the-nav > .nav > li
+  display: inline-block
+  margin-bottom: 0
+  position: relative
+  font-size: .9rem
+
 .gc-mark
   display: none
 
@@ -195,11 +201,7 @@ ul.subnav.logged-out
     line-height: normal
     .my-account
       min-width: 120px
-  .the-nav > .nav > li
-    display: inline-block
-    margin-bottom: 0
-    position: relative
-    font-size: .9rem
+
   .the-nav > .nav > li .caret
     margin-top: 8px
     margin-left: 2px
@@ -274,20 +276,15 @@ ul.subnav.logged-out
   .logged-in .navbar .nav-collapse
     display: none
 
-  .mobile-nav
-    margin: 0 auto
-    text-align: center
-  
-    .login-buttons
-      padding: .25rem 0 !important
-      margin: 0 !important
-      a.button
-        padding-right: .2rem !important
-        font-size: .6rem
-
   .nav.nav-pill
     padding: 0
-    margin: .75rem
+    margin: 0
+  
+  .nav > li a
+    display: block
+    padding: .5rem
+    color: $color-blue-4
+    text-decoration: none
 
   ul.subnav
     margin: 0
@@ -344,29 +341,6 @@ ul.subnav.logged-out
       color: $color-white
       padding: .5rem .75rem
       font-size: 1rem
-  
-  .navbar .mobile-nav
-    padding-top: .5rem
-    margin: 0 auto
-    text-align: center
-  
-    .nav.nav-pill
-      width: 100% !important
-      text-align: center
-  
-      li
-        display: inline
-        a
-          color: $color-blue-4
-  
-    .site-title
-      padding: 0
-  
-    .right
-      margin-right: 1rem
-  
-    .left
-      margin-left: 1rem
 
 @media (max-width: $media-small-max)
   .navbar > .mobile-nav > .right
