--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -84,23 +84,11 @@
   .page 
     .hero-section 
       h1
-        padding: .5em 0
+        padding: 1em 0
         font-size: 1.75rem
 
       .public-subnav
-        position: relative 
-
-        li
-          margin: .25em 0
-
-          span, a
-            display: block
-            padding: 0.5em 0
-            &:hover
-              background-color: transparent
-
-          span
-            background-color: rgba(255,255,255,.4)
+        display: none
 
     .main-section
       padding: 1.25rem
