--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -156,6 +156,10 @@ ul.subnav.logged-out
 .the-nav .nav-pill.right.public-nav
   margin-top: .4em
   display: none
+  span
+    padding: .5rem
+    color: $color-blue-4
+    border-bottom: 2px solid $color-blue-4
 
 .the-nav > .nav > li
   display: inline-block
@@ -386,6 +390,8 @@ ul.subnav.logged-out
     color: $color-blue-4
     margin-top: 1em
     margin-right: 1em
+    &:hover
+      color: $color-blue-4
 
 .noscroll
   overflow: hidden
