added links for U-M and GC login to mobile menu to replace buttons for now

--- a/app/views/layouts/navigation/_public_nav.haml
+++ b/app/views/layouts/navigation/_public_nav.haml
@@ -5,3 +5,9 @@
 = render :partial => "pages/subnav"
 
 %li= link_to "Blog", "http://blog.gradecraft.com", :target => "_blank"
+
+%li
+  = link_to "U-M Login", saml_init_path 
+
+%li
+  = link_to "GradeCraft Login", new_user_session_path
