--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -94,6 +94,13 @@
       width: 23%
       margin: 0 1% 0 1%
       text-align: center
+      
+      .circle
+        width: 150px
+        height: 150px
+        background-color: $color-blue-3
+        border-radius: 50%
+        margin: 0 auto
 
       h4
         margin-top: .75rem
