added colored circle backgrounds to each image for pedagogy section

--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -98,9 +98,20 @@
       .circle
         width: 150px
         height: 150px
-        background-color: $color-blue-3
         border-radius: 50%
         margin: 0 auto
+        
+        &.what-is-gameful
+          background-color: $color-blue-3
+        
+        &.getting-started
+          background-color: $color-green-2
+          
+        &.faq
+          background-color: $color-blue-4
+          
+        &.example-syllabi
+          background-color: $color-orange-1
 
       h4
         margin-top: .75rem
