--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -67,26 +67,29 @@
     %h2.center Learn More About Gameful Pedagogy
     .section-container
       .quarter
-        .circle
+        .circle.what-is-gameful
           = image_tag "book.png", :width => "100"
         %br
         %h4 What is Gameful?
         %p Learn more about the core elements of gameful learning
         = link_to "Read More", "http://gamefulpedagogy.com/what-is-gameful", :target => "_blank"
       .quarter
-        = image_tag "getting-started.png", :width => "100"
+        .circle.getting-started
+          = image_tag "getting-started.png", :width => "100"
         %br
         %h4 Getting Started
         %p Learn how to implement gameful design in your course
         = link_to "Get Started", "http://gamefulpedagogy.com/getting-started", :target => "_blank"
       .quarter
-        = image_tag "FAQs.png", :width => "100"
+        .circle.faq
+          = image_tag "faq.png", :width => "100"
         %br
         %h4 FAQs
         %p Frequently asked questions about gameful pedagogy
         = link_to "Find your question", "http://gamefulpedagogy.com/faqs", :target => "_blank"
       .quarter
-        = image_tag "example-syllabi.png", :width => "100"
+        .circle.example-syllabi
+          = image_tag "example-syllabi.png", :width => "100"
         %br
         %h4 Example Syllabi
         %p Example syllabi from courses using gameful pedagogy
