Migrate to AssignmentTypeWeight

--- a/app/assets/stylesheets/_forms.sass
+++ b/app/assets/stylesheets/_forms.sass
@@ -142,7 +142,7 @@ ul.accepts_submission_types
   border-bottom-right-radius: $global-radius
   border-bottom-left-radius: $global-radius
 
-.assignment_weights small
+.assignment_type_weights small
   font-size: 100%
   font-style: italic
   background-color: $alert-color
