--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -131,7 +131,7 @@ a:hover + .display_on_hover
     border-bottom: 1px solid $color-grey-3
     padding: 1rem
 
-  .assignment_weights .panel.callout.columns
+  .assignment_type_weights .panel.callout.columns
     margin-right: 1rem
     width: 23%
 
