--- a/app/views/info/earned_badges.html.haml
+++ b/app/views/info/earned_badges.html.haml
@@ -13,8 +13,9 @@
       %tr
         %th{scope: "col"} First Name
         %th{scope: "col"} Last Name
-        %th{scope: "col"}= "#{term_for :badges} Earned"
         %th{:style => "display: none", } Badge Count
+        - @badges.each do |badge|
+          %th{:scope => "col", :id => badge.try(:id), :name => badge.try(:name)}= badge.name
         - if current_course.valuable_badges?
           %th{scope: "col"} Total Badge Score
     %tbody
@@ -22,12 +23,15 @@
         %tr
           %td= link_to student.first_name, student_path(student)
           %td= link_to student.last_name, student_path(student)
-          %td
-            - student.earned_badges_for_course(current_course).each do |eb|
-              %a
-                %img{:src => eb.try(:icon), :alt => eb.try(:name), :width => "20", :title => eb.name}
-              .display_on_hover.hover-style
-                = eb.name
           %td{:style => "display: none"}= points student.earned_badges_for_course(current_course).count
+          - @badges.each do |badge|
+            %td
+              -if student.earned_badge_for_badge(badge.id).count > 0
+                %a
+                  %img{:src => badge.try(:icon), :alt => badge.try(:name), :width => "20", :title => badge.name}
+                  %i
+                    x#{student.earned_badges_for_badge_count(badge.id)}
+                .display_on_hover.hover-style
+                  = badge.name
           - if current_course.valuable_badges?
             %td= points student.earned_badge_score_for_course(current_course)
