--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -156,9 +156,24 @@ a.outline-button
     .section-container
       padding: 0 .5rem
 
-    .feature-overview
+    .feature-section
       h2
         margin-bottom: 2rem !important
+
+@media (max-width: 800px)
+  .homepage
+    .feature-section
+      height: auto
+      padding: 2rem 0 4rem
+
+@media (max-width: 700px)
+  .homepage
+    .feature-section
+      .quarter
+        width: 50%
+        margin: 0
+        box-sizing: border-box
+        padding: 1em
 
 @media (max-width: $media-small-max)
   .homepage
