improved responsiveness of newsletter bar between tablet and mobile

--- a/app/assets/stylesheets/_homepage.sass
+++ b/app/assets/stylesheets/_homepage.sass
@@ -171,7 +171,7 @@ a.outline-button
     .feature-section
       .quarter
         width: 50%
-        margin: 0
+        margin: 0 auto
         box-sizing: border-box
         padding: 1em
 
@@ -231,12 +231,12 @@ a.outline-button
       h2
         padding: 1rem .25rem 0
 
-    .quarter
-      width: calc(100% - 2rem) !important
-      clear: both
-      margin: 0
-      background-color: $color-white
-      padding: 0 1rem 1rem
+      .quarter
+        width: 100%
+        clear: both
+        margin: 0 auto
+        background-color: $color-white
+        padding: 0 1rem 1rem
 
       p
         margin: 0
