--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@
   *= require jquery.dynatable
   *= require angular-tooltips.min
   *= require timelineJS/timeline
+  *= require stacktable.css
   *= require plugins/char_counter.min.css
   *= require plugins/code_view.min.css
   *= require plugins/colors.min.css
