--- a/app/assets/stylesheets/_layout.sass
+++ b/app/assets/stylesheets/_layout.sass
@@ -113,6 +113,8 @@ a:hover + .display_on_hover
     margin-bottom: 1rem
 
 @media (max-width: $media-medium-max)
+  .student.mainContent
+    width: 100%
   .mainContainer.staff
     width: 100%
   .box
@@ -124,8 +126,6 @@ a:hover + .display_on_hover
     width: 23%
 
 @media (max-width: $media-small-max)
-  .mainContent
-    width: 100% !important
   .mainContainer.staff
     width: 100%
   .badge-icon
