--- a/app/views/layouts/_student.haml
+++ b/app/views/layouts/_student.haml
@@ -3,5 +3,5 @@
   = content_nav do
     = render "students/student_profile_tabs"
   .student.mainContent= render "layouts/content"
-  .student-sidebar.hide-for-small
+  .student-sidebar.hide-for-medium.hide-for-small
     = render "students/student_sidebar"
