--- a/app/views/assignments/group/_table_body.html.haml
+++ b/app/views/assignments/group/_table_body.html.haml
@@ -56,4 +56,4 @@
                 .right
                   %ul.button-bar
                     - if group_presenter.assignment_graded?
-                      %li= link_to glyph(:edit) + "Override Grade", edit_assignment_grade_path(presenter.assignment, student_id: student.id), class: "button"
+                      %li= link_to glyph(:edit) + "Override Grade", edit_grade_path(grade), class: "button"
