--- a/app/views/grades/components/_edit_button.html.haml
+++ b/app/views/grades/components/_edit_button.html.haml
@@ -1,5 +1,5 @@
 - if grade.group.nil?
-  - path = edit_assignment_grade_path(grade.assignment, student_id: grade.student_id)
+  - path = edit_grade_path(grade)
 - else
   - path = grade_assignment_group_path(grade.assignment, grade.group)
 
