--- a/app/views/info/_grades_table.haml
+++ b/app/views/info/_grades_table.haml
@@ -51,7 +51,7 @@
                     %ul.button-bar
                       %li= link_to glyph(:eye) + "See Grade", grade_path(grade), class: "button"
                       - if assignment.is_individual?
-                        %li= link_to glyph(:edit) + "Edit Grade", edit_assignment_grade_path(assignment_id: assignment.id, student_id: student.id), class: "button"
+                        %li= link_to glyph(:edit) + "Edit Grade", edit_grade_path(grade), class: "button"
                       - elsif assignment.has_groups?
                         %li= link_to glyph(:check) + "Edit Grade", grade_assignment_group_path(assignment, group), class: "button"
                 %td.center= check_box_tag "grade_ids[]", grade.id, false, data: { behavior: "toggle-disable-list-command", commands: "[data-behavior='selected-#{grade_type}-grades-command']" }
