--- a/app/views/info/_ungraded_submissions_table.haml
+++ b/app/views/info/_ungraded_submissions_table.haml
@@ -39,7 +39,7 @@
               %ul.button-bar
                 - if assignment.is_individual?
                   %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(assignment, id: submission.id), class: "button"
-                  %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(assignment_id: assignment.id, student_id: student.id), class: "button"
+                  %li= link_to glyph(:check) + "Grade", assignment_student_grade_path(assignment, student), method: :post, class: "button"
                 - elsif assignment.has_groups?
                   %li= link_to glyph(:eye) + "See Submission", assignment_submission_path(assignment.id, id: submission.id), class: "button"
                   %li= link_to glyph(:check) + "Grade", grade_assignment_group_path(assignment, group), class: "button"
