--- a/app/views/info/ungraded_submissions.html.haml
+++ b/app/views/info/ungraded_submissions.html.haml
@@ -49,7 +49,7 @@
               %ul.button-bar
                 - if submission.assignment.is_individual?
                   %li= link_to glyph(:eye) + "See Submission",assignment_submission_path(submission.assignment, id: submission.id), class: "button"
-                  %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(assignment_id: submission.assignment.id, student_id: submission.student.try(:id)), class: "button"
+                  %li= link_to glyph(:check) + "Grade", assignment_student_grade_path(submission.assignment, submission.student), method: :post, class: "button"
                 - else
                   %li= link_to glyph(:eye) + "See Submission",assignment_submission_path(submission.assignment, id: submission.id), class: "button"
                   %li= link_to glyph(:check) + "Grade", grade_assignment_group_path(submission.assignment, submission.group), class: "button"
