--- a/app/views/staff/show.html.haml
+++ b/app/views/staff/show.html.haml
@@ -34,5 +34,5 @@
           %td= grade.graded_at
           %td
             %ul.button-bar
-              %li= link_to glyph(:edit) + "Edit", edit_assignment_grade_path(grade.assignment, student_id: grade.student.id), class: "button"
+              %li= link_to glyph(:edit) + "Edit", edit_grade_path(grade), class: "button"
               %li= link_to glyph(:trash) + "Delete", remove_grade_path(grade), class: "button", data: { confirm: "Are you sure?" }, :method => :post
