--- a/app/views/students/grade_index.html.haml
+++ b/app/views/students/grade_index.html.haml
@@ -30,6 +30,6 @@
           %td= g.predicted_points
           %td= g.feedback
           %td= g.status
-          %td= link_to "Edit Grade", edit_assignment_grade_path(g.assignment_id, student_id: g.student_id), class: "button"
+          %td= link_to "Edit Grade", edit_grade_path(g), class: "button"
           %td= link_to "See Grade", grade_path(g), class: "button"
           %td= link_to "Delete Grade", grade_path(g), class: "button", data: { confirm: "Are you sure?" }, :method => :delete
