--- a/app/views/submissions/_buttons.haml
+++ b/app/views/submissions/_buttons.haml
@@ -9,7 +9,7 @@
       %li
         = link_to glyph(:trash) + "Delete Submission", assignment_submission_path(assignment: presenter.assignment, submission: presenter.submission ), data: { confirm: "Are you sure?",  method: :delete }
 
-      %li= link_to glyph(:check) + "Grade", edit_assignment_grade_path(presenter.assignment, presenter.submission, student_id: presenter.student.id)
+      %li= link_to glyph(:check) + "Grade", assignment_student_grade_path(presenter.assignment, presenter.student), method: :post
 - elsif presenter.assignment.has_groups?
   .context_menu
     %ul
