--- a/app/views/teams/_leaderboard.html.haml
+++ b/app/views/teams/_leaderboard.html.haml
@@ -12,4 +12,4 @@
         - if current_course.team_challenges?
           %td.points= team.challenge_grade_score
         - else
-          %td.points= team.average_points
+          %td.points= team.average_score
