--- a/app/views/teams/_stats.haml
+++ b/app/views/teams/_stats.haml
@@ -16,7 +16,7 @@
       %tr
         %td= index + 1
         %td= link_to team.name, team
-        %td= points team.average_points
+        %td= points team.average_score
         - if current_course.team_challenges?
           %td= points team.challenge_grade_score
         %td= team.member_count
