--- a/app/views/assignments/grades/index.html.haml
+++ b/app/views/assignments/grades/index.html.haml
@@ -7,12 +7,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  - if presenter.has_teams? && presenter.assignment.is_individual?
-    .team-filter
-      = form_tag assignment_grades_path(presenter.assignment), name: "see_team", :onchange => ("javascript: document.see_team.submit();"), :method => :get do
-        %label.sr-only{:for => "team_id"}
-          Select #{term_for :team}
-        = select_tag :team_id, options_for_select(presenter.teams.map { |t| [t.name, t.id] }, presenter.team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
+  = team_filter if presenter.has_teams? && presenter.assignment.is_individual?
 
   - if presenter.grade_with_rubric?
     - presenter.students_being_graded.each do |student|
