--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -7,12 +7,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  - if current_course.has_teams? && current_user_is_staff?
-    .team-filter
-      = form_tag badge_path(presenter.badge), name: "see_team", :onchange => ("javascript: document.see_team.submit();"), :method => :get do
-        %label.sr-only{:for => "team_id"}
-          Select #{term_for :team}
-        = select_tag :team_id, options_for_select(presenter.teams.map { |t| [t.name, t.id] }, presenter.team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
+  = team_filter if current_course.has_teams? && current_user_is_staff?
 
   .badge-container
     .badge-icon
