--- a/app/views/earned_badges/mass_edit.html.haml
+++ b/app/views/earned_badges/mass_edit.html.haml
@@ -5,12 +5,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  - if current_course.has_teams?
-    .team-filter
-      = form_tag mass_award_badge_path, name: "see_team", :onchange => ("javascript: document.see_team.submit();"), :method => :get do
-        %label.sr-only{:for => "team_id"}
-          Select #{term_for :team}
-        = select_tag :team_id, options_for_select(@teams.map { |t| [t.name, t.id] }, @team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
+  = team_filter if current_course.has_teams?
 
   #massGrade
     = simple_form_for @badge, method: :post, :html => {class: "mass-edit-earned-badges" }, :url => mass_earn_badge_path(@badge) do |f|
