--- a/app/views/teams/_leaderboard.html.haml
+++ b/app/views/teams/_leaderboard.html.haml
@@ -6,7 +6,7 @@
       %th Points
       %th Team
   %tbody
-    - current_course.teams.order_by_high_score.each do |team|
+    - @teams.each do |team|
       %tr
         %td= team.name
         - if current_course.team_challenges?
