Revised team filter help and implemented comprehensively

--- a/app/views/assignments/grades/mass_edit.html.haml
+++ b/app/views/assignments/grades/mass_edit.html.haml
@@ -5,7 +5,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  = team_filter if current_course.has_teams? && @assignment.is_individual?
+  = team_filter(current_course.teams) if current_course.has_teams? && @assignment.is_individual?
 
   #massGrade
     = simple_form_for @assignment, method: :put, :url => mass_update_assignment_grades_path(@assignment) do |f|
