--- a/app/views/assignment_types/all_grades.html.haml
+++ b/app/views/assignment_types/all_grades.html.haml
@@ -7,7 +7,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  = team_filter if @teams.present?
+  = team_filter(@teams) if @teams.present?
 
   %table
     %tr
