--- a/app/views/assignments/grades/index.html.haml
+++ b/app/views/assignments/grades/index.html.haml
@@ -7,7 +7,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  = team_filter if presenter.has_teams? && presenter.assignment.is_individual?
+  = team_filter(presenter.teams) if presenter.has_teams? && presenter.assignment.is_individual?
 
   - if presenter.grade_with_rubric?
     - presenter.students_being_graded.each do |student|
