--- a/app/views/badges/show.html.haml
+++ b/app/views/badges/show.html.haml
@@ -7,7 +7,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  = team_filter if current_course.has_teams? && current_user_is_staff?
+  = team_filter(presenter.teams) if current_course.has_teams? && current_user_is_staff?
 
   .badge-container
     .badge-icon
