--- a/app/views/info/awarded_badges.html.haml
+++ b/app/views/info/awarded_badges.html.haml
@@ -5,12 +5,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  - if current_course.has_teams?
-    .team-filter
-      = form_tag earned_badges_path, name: "see_team", :onchange => ("javascript: document.see_team.submit();"), :method => :get do
-        %label
-          .sr-only Select #{term_for :team}
-        = select_tag :team_id, options_for_select(@teams.map { |t| [t.name, t.id] }, @team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
+  = team_filter(@teams) if current_course.has_teams?
 
   %table.dynatable.no-table-header.no-button-bar
     %caption.sr-only All Awarded Achievements
