--- a/app/views/students/index.html.haml
+++ b/app/views/students/index.html.haml
@@ -7,14 +7,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  - if current_course.has_teams?
-    .team-filter
-      / Checking to see if the current course has teams, displaying the team filter if it does
-      - if current_course.has_teams?
-        = form_tag students_path, name: "see_team", :onchange => ("javascript: document.see_team.submit();"), :method => :get do
-          %label
-            .sr-only Select #{term_for :team}
-          = select_tag :team_id, options_for_select(@teams.map { |t| [t.name, t.id] }, @team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
+  = team_filter(@teams) if current_course.has_teams?
 
   / Display the table of course students, their leaderboard display, their team affiation, their score and their grade
   = render "students_table", course: current_course, :students => @students
