--- a/app/views/students/leaderboard.html.haml
+++ b/app/views/students/leaderboard.html.haml
@@ -5,12 +5,7 @@
 .pageContent
   = render "layouts/alerts"
 
-  - if presenter.has_teams?
-    .team-filter
-      = form_tag leaderboard_path, name: "see_team", :onchange => ("javascript: document.see_team.submit();"), :method => :get do
-        %label
-          .sr-only Select #{term_for :team}
-        = select_tag :team_id, options_for_select(presenter.teams.map { |t| [t.name, t.id] }, presenter.team.try(:id)), :prompt => "– Select #{(term_for :team).titleize} –"
+  = team_filter(presenter.teams) if current_course.has_teams?
 
   %table.dynatable.second-row-header
     %thead
