--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -131,16 +131,16 @@
     %h4 MULTIPLIERS
     %p.clear
       %b User's set:
-      = @course.total_assignment_weight
+      = @course.total_weights
     %p
       %b Maximium size:
-      = @course.max_assignment_weight
+      = @course.max_weights_per_assignment_type
     %p
       %b Multipliers must be set by:
-      = @course.assignment_weight_close_at
+      = @course.weights_close_at
     %p
       %b Multiplier/weight term:
       = @course.weight_term
     %p
       %b What amount should other (unselected) assignment types be multiplied by?
-      = @course.default_assignment_weight
+      = @course.default_weight
