--- a/app/views/grades/components/_score.haml
+++ b/app/views/grades/components/_score.haml
@@ -2,7 +2,7 @@
 - if GradeProctor.new(grade).viewable? && grade.final_points
   - if assignment_type.student_weightable?
     -# Checking to see if this student has weighted this assignment anything other than 1
-    - if (grade.student.weight_for_assignment_type(assignment_type) == 0 && current_course.default_assignment_weight != 1) || grade.student.weight_for_assignment_type(assignment_type) > 1
+    - if (grade.student.weight_for_assignment_type(assignment_type) == 0 && current_course.default_weight != 1) || grade.student.weight_for_assignment_type(assignment_type) > 1
       = "#{points grade.final_points} / #{ points assignment.point_total } points (Raw)"
       .bold= "#{ points grade.score } / #{points grade.point_total} points (Multiplied)"
     - else
