Removed separate ungraded and resubmitted assignment pages

--- a/app/views/info/_submissions_table.haml
+++ b/app/views/info/_submissions_table.haml
@@ -1,8 +1,8 @@
-%h4.subtitle#ungradedTableCaption
-  = "Ungraded #{term_for :assignment} Submissions"
-  %span.label.alert= ungraded_submissions_count_for(course)
+%h4.subtitle{ id: "#{submission_type}TableCaption" }
+  = subtitle
+  %span.label.alert= count
 
-- @ungraded_submissions_by_assignment.each do |assignment, submissions|
+- submissions_by_assignment.each do |assignment, submissions|
   %h4.assignment_name
     = link_to assignment.name, assignment
     = link_to glyph(:check) + "Quick Grade", mass_edit_assignment_grades_path(assignment), class: "button"
